Bug 1066756 - Include characters with Unicode category Sk (modifier symbol) in double-click word selection. r=mats